nvidia-graphics-drivers (470.103.01-4) UNRELEASED; urgency=medium

  * Update kernel-5.7.0-set-memory-array.patch to fix kernel module build for
    ppc64el.
  * Backport mt_device_gre changes from 510.39.01 to fix kernel module build
    for arm64.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 17 May 2022 14:13:32 +0200

nvidia-graphics-drivers (470.103.01-3~deb11u2) bullseye; urgency=medium

  * Re-enable building libnvidia-nvvm4.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Mar 2022 13:38:53 +0100

nvidia-graphics-drivers (470.103.01-3~deb11u1) bullseye; urgency=medium

  * Rebuild for bullseye.
  * Temporarily disable building libnvidia-nvvm4 to avoid NEW.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 20 Mar 2022 21:38:19 +0100

nvidia-graphics-drivers (470.103.01-3) unstable; urgency=medium

  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream (510.54-1).
  * Declare Testsuite: autopkgtest-pkg-dkms (510.54-1).
  * nvidia-detect: Drop support for Tesla 460 drivers (EoL).

 -- Andreas Beckmann <anbe@debian.org>  Thu, 17 Mar 2022 10:27:06 +0100

nvidia-graphics-drivers (470.103.01-2) unstable; urgency=medium

  * Add xorg-video-abi-25 (Xorg Xserver 21) as alternative dependency.
    (Closes: #1005311)
  * nvidia-detect: Add support for (Tesla) 470 drivers in bullseye.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 13 Feb 2022 23:20:24 +0100

nvidia-graphics-drivers (470.103.01-1) unstable; urgency=medium

  * New upstream production branch release 470.103.01 (2022-01-31).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.  (Closes: #1004847)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Added support for the following GPUs: NVIDIA GeForce MX550,
      NVIDIA GeForce MX570, NVIDIA GeForce RTX 2050.

  [ Andreas Beckmann ]
  * Refresh patches.
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 03 Feb 2022 22:27:11 +0100
