@@ -1,4 +1,4 @@
-From 48e4fb617b41369c4923cb17bde37d6e94b2cd3c Mon Sep 17 00:00:00 2001
+From 67115af8f41ecb04966423dcf57bb7c9e9d7c1fc Mon Sep 17 00:00:00 2001
 From: Andreas Beckmann <anbe@debian.org>
 Date: Thu, 14 Apr 2022 22:07:16 +0200
 Subject: [PATCH] backport mt_device_gre changes from 510.39.01
@@ -10,11 +10,11 @@ Subject: [PATCH] backport mt_device_gre changes from 510.39.01
  3 files changed, 24 insertions(+)
 
 diff --git a/common/inc/nv-pgprot.h b/common/inc/nv-pgprot.h
-index fdeaa8e..6446c0f 100644
+index f38e5a1..8556ce1 100644
 --- a/common/inc/nv-pgprot.h
 +++ b/common/inc/nv-pgprot.h
-@@ -83,8 +83,13 @@ static inline pgprot_t pgprot_modify_writecombine(pgprot_t old_prot)
- #else
+@@ -65,8 +65,13 @@ static inline pgprot_t pgprot_modify_writecombine(pgprot_t old_prot)
+ 
  #define NV_PGPROT_UNCACHED_DEVICE(old_prot)     pgprot_noncached(old_prot)
  #if defined(NVCPU_AARCH64)
 +#if defined(NV_MT_DEVICE_GRE_PRESENT)
@@ -28,10 +28,10 @@ index fdeaa8e..6446c0f 100644
      __pgprot_modify(old_prot, PTE_ATTRINDX_MASK, NV_PROT_WRITE_COMBINED_DEVICE)
  #define NV_PGPROT_WRITE_COMBINED(old_prot)      NV_PGPROT_UNCACHED(old_prot)
 diff --git a/conftest.sh b/conftest.sh
-index dfb84d2..fe1c87c 100755
+index 6d761b6..2871466 100755
 --- a/conftest.sh
 +++ b/conftest.sh
-@@ -2524,6 +2524,24 @@ compile_test() {
+@@ -2568,6 +2568,24 @@ compile_test() {
                  return
              fi
          ;;
@@ -57,10 +57,10 @@ index dfb84d2..fe1c87c 100755
              #
              # Conftest for get_user_pages()
 diff --git a/nvidia/nvidia.Kbuild b/nvidia/nvidia.Kbuild
-index 04e7bdc..72708f2 100644
+index 473923c..34f4c9a 100644
 --- a/nvidia/nvidia.Kbuild
 +++ b/nvidia/nvidia.Kbuild
-@@ -209,6 +209,7 @@ NV_CONFTEST_TYPE_COMPILE_TESTS += vmalloc_has_pgprot_t_arg
+@@ -211,6 +211,7 @@ NV_CONFTEST_TYPE_COMPILE_TESTS += vmalloc_has_pgprot_t_arg
  NV_CONFTEST_TYPE_COMPILE_TESTS += acpi_fadt_low_power_s0
  NV_CONFTEST_TYPE_COMPILE_TESTS += mm_has_mmap_lock
  NV_CONFTEST_TYPE_COMPILE_TESTS += pci_channel_state
